force-app/main/default/objects/Quote/fields/Contact_Filter__c.field-meta.xml
<CustomField>
    <fullName>Contact_Filter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is created as part of CCRM-2905 in release 3. This field will auto-populate with Account ID related to Quote after Quote creation, so that it will only display the contacts associated to related account of Quote on &quot;Contact Name&quot; field of Quote.</description>
    <inlineHelpText>This field should not be removed from the page layout otherwise the lookup filter logic built for Quote &quot;Contact Name&quot; field will not work.</inlineHelpText>
    <label>Contact Filter</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>