force-app/main/default/objects/Quote/fields/Data_Migration_Conversion_Key__c.field-meta.xml
<CustomField>
    <fullName>Data_Migration_Conversion_Key__c</fullName>
    <description>Represents the primary key of the Quote as it existed in the source system</description>
    <label>Data Migration Conversion Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>