force-app/main/default/objects/Quote/fields/Don_t_Default_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Don_t_Default_Expiration_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Don’t Default Expiration Date</label>
    <type>Checkbox</type>
</CustomField>