force-app/main/default/objects/Quote/fields/eSign_Approver_Email__c.field-meta.xml
<CustomField>
    <fullName>eSign_Approver_Email__c</fullName>
    <formula>if(Opportunity.Account.RecordType.Name = &#39;Prospect&#39;, $Label.eSign_Approver_Email ,Opportunity.Owner.Email)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>eSign Approver Email</label>
    <type>Text</type>
</CustomField>