force-app/main/default/objects/Quote/fields/Expired_Flag__c.field-meta.xml
<CustomField>
    <fullName>Expired_Flag__c</fullName>
    <formula>IF(Expired__c==TRUE,IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;red&quot;),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expired Flag</label>
    <type>Text</type>
</CustomField>