force-app/main/default/objects/Quote/fields/Product_Types__c.field-meta.xml
<CustomField>
    <fullName>Product_Types__c</fullName>
    <label>Product Types</label>
    <type>TextArea</type>
</CustomField>