force-app/main/default/objects/Quote/validationRules/Lock_Quote_when_Opp_stage_is_closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Quote_when_Opp_stage_is_closed</fullName>
    <active>true</active>
    <description>Locking opportunity and related quote records when opportunity stage equals to closed won
CCRM-3877.</description>
    <errorConditionFormula>AND(
	OR(
		ISPICKVAL(Opportunity.StageName, &#39;Closed Won&#39;) ,
		ISPICKVAL(Opportunity.StageName,&#39;Closed Lost&#39;)
	 ),
     $Profile.Name  &lt;&gt; &#39;System Administrator&#39;
)</errorConditionFormula>
    <errorMessage>You are not allowed to edit quotes when its Opportunity is Closed</errorMessage>
</ValidationRule>