force-app/main/default/objects/Quote/validationRules/Quote_Expired.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Expired</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE(Status), &quot;Expired&quot;)</errorConditionFormula>
    <errorDisplayField>ExpirationDate</errorDisplayField>
    <errorMessage>This Quote has expired. A new Quote will need to be created.</errorMessage>
</ValidationRule>