force-app/main/default/objects/Quote/listViews/All_Quotes_Software.listView-meta.xml
<ListView>
    <fullName>All_Quotes_Software</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>QUOTE.STATUS</columns>
    <columns>QUOTE.ISSYNCING</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>QUOTE.SUBTOTAL</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Quotes - Software</label>
    <sharedTo>
        <role>GSS_NA_Sales_Manager_Software</role>
    </sharedTo>
</ListView>