force-app/main/default/objects/Quote/listViews/Copy_of_All_Quotes_Add_Ons.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_Quotes_Add_Ons</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>QUOTE.STATUS</columns>
    <columns>QUOTE.ISSYNCING</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>QUOTE.SUBTOTAL</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Quotes - Add Ons</label>
    <sharedTo>
        <role>GSS_NA_Sales_Manager_Add_Ons</role>
    </sharedTo>
</ListView>